# EasyLearn

./: .gitignore  README.md
backend/: .env.example  3.1.3  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  tmp.py
backend/activate/: pyvenv.cfg
backend/activate/Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu
backend/app/: blog.py  course.py  employee.py  quiz.py  support_routes.py  user.py  utils.py  volunteer.py
backend/db/: schema.sql  seed.sql
client/: .env.example  next.config.mjs  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/blog/: page.tsx
client/app/blog/[id]/: page.tsx
client/app/courses/: page.tsx
client/app/courses/[id]/: page.tsx
client/app/employee/dashboard/: page.tsx
client/app/login/: page.tsx
client/app/quiz/: page.tsx
client/app/register/: page.tsx
client/app/support/: page.tsx
client/app/tools/: page.tsx
client/app/verify/: page.tsx
client/app/volunteer/: page.tsx
client/app/volunteer/add-blog/: page.tsx
client/app/volunteer/add-course/: page.tsx
client/app/volunteer/blog/new/: page.tsx
client/app/volunteer/course/new/: page.tsx
client/app/volunteer/dashboard/: page.tsx
client/app/volunteer/edit-profile/: page.tsx
client/app/volunteer/login/: page.tsx
client/app/volunteer/register/: page.tsx
client/components/: CourseEditor.tsx  SupportTab.tsx  Translator.tsx  blog-editor.tsx  course-enrollment.tsx  footer.tsx  navbar.tsx  supportButton.tsx
client/services/: api.js
client/types/: admin.ts
(+7 files in other folders)
